[package]
name = "romusha"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "romusha"
path = "src/main.rs"

[lib]
name = "romusha"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
env_logger = "0.10.0"
futures = "0.3.26"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
toml = "0.7.2"

[profile.release]
lto = true
strip = true
